--- a/style.css
+++ b/style.css
@@ -57,48 +57,74 @@ h6 {
 
 /* CSS RESET */
 
-.main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 75vh;
-  min-height: 500px;
-  padding: 10px;
-  margin-top: 50px;
+body {
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.644), rgba(255, 255, 255, 0.703));
 }
 
-.calculator-body {
-  background-color: gray;
-  border: 2px solid black;
-  border-radius: 15px;
-  padding: 20px;
-  width: 400px;
-  height: 100%;
-}
-
-.buttons-grid {
+.calculator-grid {
+  margin-top: 100px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
-  grid-template-rows: 5;
-}
-.btn {
-  background-color: whitesmoke;
-  border: 2px solid black;
-  border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  grid-template-columns: repeat(4, 80px);
+  grid-template-rows: repeat(7, 80px);
+  gap: 1px;
   padding: 20px;
-  text-align: center;
-  font-size: 20px;
+  background-color: whitesmoke;
+  border-radius: 30px;
+  /* border: 1px solid black; */
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2);
 }
 
-.btn-big {
+.output {
+  grid-column-start: span 4;
+  grid-row-start: span 2;
+  /* grid-row-start: span 4; */
+  background-color: whitesmoke;
+  border: 0.5px solid black;
+  border-radius: 15px;
+  margin-bottom: 10px;
+  display: flex;
+  /* flex-wrap: wrap; */
+  /* flex-shrink: ; */
+  /* flex-grow: 2, 1; */
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.previous,
+.current {
+  height: 50%;
+
+  /* display: flex; */
+  padding: 10px;
+  flex-wrap: wrap;
+}
+
+.previous {
+  font-size: 15px;
+}
+
+.current {
+  font-size: 25px;
+}
+
+.span-two {
   grid-column-start: span 2;
 }
+button {
+  border: none;
+  margin: 2px;
+  font-size: 20px;
+  border-radius: 150px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  transition: all 0.2s;
+}
 
-.screen {
-  border: 1px solid black;
-  /* padding: 10px 20px; */
-  border-radius: 5px;
-  margin-bottom: 20px;
-  background-color: white;
+button:hover {
+  transform: translateY(-1px);
+  background-color: rgba(128, 128, 128, 0.8);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
 }
