--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&family=Roboto:wght@400;700&display=swap');
+
 *,
 *::before,
 *::after {
@@ -58,73 +60,122 @@ h6 {
 /* CSS RESET */
 
 body {
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.644), rgba(255, 255, 255, 0.703));
+  background-color: darkorange;
+  font-family: 'Quicksand', 'Roboto', sans-serif;
+  text-align: center;
 }
 
-.calculator-grid {
-  margin-top: 100px;
-  display: grid;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  grid-template-columns: repeat(4, 80px);
-  grid-template-rows: repeat(7, 80px);
-  gap: 1px;
-  padding: 20px;
-  background-color: whitesmoke;
-  border-radius: 30px;
-  /* border: 1px solid black; */
-  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2);
-}
-
-.output {
-  grid-column-start: span 4;
-  grid-row-start: span 2;
-  /* grid-row-start: span 4; */
-  background-color: whitesmoke;
-  border: 0.5px solid black;
-  border-radius: 15px;
-  margin-bottom: 10px;
+.container {
   display: flex;
-  /* flex-wrap: wrap; */
-  /* flex-shrink: ; */
-  /* flex-grow: 2, 1; */
   flex-direction: column;
-  align-items: flex-end;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 6rem;
+  margin-top: 1rem;
 }
 
-.previous,
-.current {
-  height: 50%;
-
-  /* display: flex; */
-  padding: 10px;
-  flex-wrap: wrap;
+.calculator {
+  max-width: 300px;
+  width: 100%;
+  border: 1px solid black;
+  border-radius: 1rem;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
+  background-color: #212121;
+  overflow: auto;
+  padding: 1rem;
 }
 
-.previous {
-  font-size: 15px;
+.screen {
+  display: block;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  /* margin: 0.5rem; */
+  background: #3b3b3b;
+  color: white;
+  margin-bottom: 2rem;
+  text-align: right;
 }
 
-.current {
-  font-size: 25px;
+.screen__previous,
+.screen__cureent {
+  min-height: 3rem;
+  height: 100%;
+}
+.screen__previous {
+  color: rgb(47, 167, 47);
+  font-size: 1.5rem;
+  margin-right: 1rem;
 }
 
-.span-two {
-  grid-column-start: span 2;
+.screen__current {
+  font-size: 2rem;
 }
-button {
+.buttons {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 3rem);
+  gap: 0.7rem;
+  margin: 0.5rem;
+}
+
+.buttons__number,
+.buttons__operation,
+.buttons__operation__clean {
+  border-radius: 100%;
   border: none;
-  margin: 2px;
-  font-size: 20px;
-  border-radius: 150px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  height: 3.25rem;
+  width: 3.25rem;
+  background-color: #534e4e;
+  color: white;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.541);
   transition: all 0.2s;
 }
 
-button:hover {
+.buttons__operation__equal {
+  margin-top: 0.1rem;
+  grid-column: 3 / span 2;
+  border-radius: 5rem;
+  border: none;
+  height: 3rem;
+  background-color: #484444;
+  color: white;
+
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.541);
+  transition: all 0.2s;
+}
+
+.buttons__number:hover,
+.buttons__operation:hover,
+.buttons__operation__clean:hover,
+.buttons__operation__equal:hover {
+  transform: translateY(-3px);
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.541);
+}
+
+.buttons__number:hover {
+  background-color: aliceblue;
+  color: black;
+}
+.buttons__operation:hover {
+  background-color: rgb(5, 193, 193);
+  color: black;
+}
+
+.buttons__operation__clean:hover {
+  background-color: rgba(169, 57, 57, 0.849);
+  color: black;
+}
+
+.buttons__operation__equal:hover {
+  background-color: rgb(8, 166, 8);
+  color: black;
+}
+
+.buttons__number:active,
+.buttons__operation:active,
+.buttons__operation__clean:active,
+.buttons__operation__equal:active {
   transform: translateY(-1px);
-  background-color: rgba(128, 128, 128, 0.8);
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.541);
 }
